Audio is now in the PlayContext, wrapping the whole app. Added functionnality where you can request to instantly play the song when calling the setSong function.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,11 @@
-.App {
-  min-height: 100vh;
-}
-
 .trackItemWrapper {
   width: 100%;
   display: flex;
   padding: 0.2em 2em;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.trackItemWrapperCurrent {
+  background-color: #ffd9d9;
 }
