Refactor GraphQL Playlist fetch in helper function. Working Queue implementation that is reactive to the page it is in

--- a/styles/PlayerFooter.module.css
+++ b/styles/PlayerFooter.module.css
@@ -9,3 +9,13 @@
     justify-content: space-around;
     align-items: center;
   }
+
+.ControlsWrapper {
+  width: 200px;
+  display: flex;
+}
+
+
+.SongInfoWrapper {
+  width: 200px;
+}
