--- a/styles/TrackItem.module.css
+++ b/styles/TrackItem.module.css
@@ -30,8 +30,9 @@
 
 .RemoveAnim {
     animation-name: removeanim;
-    animation-duration: 0.5s;
+    animation-duration: 0.3s;
     animation-fill-mode: forwards;
+    animation-timing-function: slide-in;
 }
 
 @keyframes removeanim {
@@ -41,6 +42,7 @@
 
     100% {
         opacity: 0%;
+        /* transform: translateY(-10px); */
     }
 }
 
@@ -64,7 +66,7 @@
     border-radius: 0.3em;
 }
 
-.index {
+.indexStyle {
     font-size: 1.1em;
     /* font-weight: 400; */
     grid-column: index;
