--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,17 @@ html,
 body {
   --clr-accent-500: #c17aff;
   --clr-accent-100: #ddb9fe;
+
+  --clr-gradient-left: rgb(107, 102, 250);
+  --clr-gradient-right: rgb(193, 122, 255);
   --clr-like: white;
+
+  --clr-background: #121212;
 
   --clr-primary-200: grey;
   padding: 0;
   margin: 0;
-  background-color: #121212;
+  background-color: var(--clr-background);
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
