fixed image hover display on <500 width screens

--- a/styles/TrackItem.module.css
+++ b/styles/TrackItem.module.css
@@ -17,7 +17,7 @@
     }
 
     .trackItemWrapper:not(.disable):not(.trackUnavailable):hover .imageHover {
-        display: flex;
+        display: none;
     }
     
     .trackItemWrapper:not(.disable):not(.trackUnavailable):hover .playImageHover {
