--- a/styles/PlaylistHeader.module.css
+++ b/styles/PlaylistHeader.module.css
@@ -15,6 +15,10 @@
     .playlistTitle {
         font-size: 1.4rem;
     }
+
+    .playlistType {
+        font-size: 0.7rem !important;
+    }
 }
 
 @media screen and (min-width: 501px) {
@@ -59,7 +63,7 @@
 
 .playlistTitle {
     font-weight: 800;
-    margin: 0.4em 0;
+    margin: 0.3em 0;
 }
 
 .playlistType {
