--- a/styles/SideBar.module.css
+++ b/styles/SideBar.module.css
@@ -6,7 +6,7 @@
 
 @media screen and (max-width: 950px) and (min-width: 601px) {
     .sideBarMain {
-        width: 50px;
+        max-width: 30px;
     }
 
     .shotgunMinimalLogo {
@@ -20,7 +20,7 @@
 
 @media screen and (min-width: 951px) {
     .sideBarMain {
-        width: 180px;
+        max-width: 180px;
     }
 }
 
@@ -29,7 +29,6 @@
     /* width: 100px; */
     margin-top: 3em;
     margin-inline: 2em;
-    /* background-color: blue !important; */
 }
 
 .shotgun {
