--- a/styles/PlayerFooter.module.css
+++ b/styles/PlayerFooter.module.css
@@ -1,7 +1,7 @@
 .PlayerFooterWrapper {
     height: 100%;
     width: 100%;
-    background-color: #e1cccc;
+    background-color: var(--clr-background-200);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
