--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -2,6 +2,7 @@
     /* --footer-height: 90px; */
     /* height: 100vh; */
     height: -webkit-fill-available;
+    height: 100vh;
     max-height: 100vh;
     /* overflow: hidden; */
   /* mobile viewport bug fix */
@@ -12,7 +13,7 @@
 
     display: grid;
     grid-template-columns: auto 1fr;
-    grid-template-rows: 1fr 50px;
+    grid-template-rows: 1fr auto;
 
     grid-template-areas:
     "navBar mainView"
