custom documents for font optimization and html tags

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,8 +23,7 @@ body {
   margin: 0;
   background-color: var(--clr-background);
   color: white;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
 
