--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,11 +18,12 @@ body {
   --clr-background-600: #0e0d0d;
   --clr-background-900: #000000;
 
-  --clr-primary-200: grey;
+  --clr-primary-200: rgb(185, 185, 185);
+  --clr-primary-100: white;
   padding: 0;
   margin: 0;
   background-color: var(--clr-background);
-  color: white;
+  color: var(--clr-primary-100);
   font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
