--- a/styles/TrackItem.module.css
+++ b/styles/TrackItem.module.css
@@ -5,8 +5,13 @@
 @media screen and (max-width: 600px) {
     .trackItemWrapper{
         grid-template-areas: "info duration" !important;
-        grid-template-columns: 10fr minmax(80px,1fr) !important;
+        grid-template-columns: 10fr minmax(50px,1fr) !important;
     }
+
+
+    .columnNameStyling {
+        display: none !important;
+    } 
 
     .indexStyle, .hashtag, .duration, .trackAlbum, .dateAdded {
         display: none;
@@ -112,7 +117,8 @@
     overflow:hidden;
     white-space: nowrap;
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: 400;
+    color: var(--clr-primary-100)
 }
 
 .currentTrack {
@@ -126,7 +132,6 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    color: var(--clr-primary-200)
     /* color: white !important; */
 }
 
@@ -138,7 +143,7 @@
     width: 100%;
     overflow:hidden;
     white-space: nowrap;
-    color: var(--clr-primary-200)
+    
 }
 
 .dateAdded {
@@ -148,7 +153,7 @@
 .likeDuration {
     display: flex;
     justify-content: space-between;
-    min-width: 0;
+    width: 100%;
     grid-column: duration;
     justify-self: end;
 }
@@ -207,6 +212,7 @@
     font-weight: 300;
     height: 56px;
     border-radius: 0.3em;
+    color: var(--clr-primary-200)
 }
 
 .trackItemStyling:not(.disable):hover {
