--- a/styles/SideBar.module.css
+++ b/styles/SideBar.module.css
@@ -2,9 +2,13 @@
     .sideBarMain {
         --square-length: 33px;
         height: var(--square-length) !important;
-        padding: 0 0 !important;
+        padding: 0 0;
         margin: 1em 3em;
-        flex-direction: row !important;
+        flex-direction: row;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .shotgunMinimalLogo {
@@ -24,12 +28,12 @@
 
 @media screen and (max-width: 950px) and (min-width: 601px) {
     .sideBarMain {
-        padding: 10em 0;
+        --square-length: 50px;
+        padding: 24px 0;
         margin-inline: 16px;
-        --square-length: 56px;
+
     }
 
-    
 
     .shotgunMinimalLogo {
         display: block !important;
@@ -39,7 +43,14 @@
         display: none !important;
     }
 
+    .shotgun {
+        border-bottom: solid 1px rgba(255, 255, 255, 0.243) !important;
+        padding-bottom: 24px !important;
+        width: 100%;
+    }
+
     .playlistItem {
+        margin-top: 16px;
         flex-direction: column !important;
         width: var(--square-length);
     }
@@ -85,11 +96,6 @@
 }
 
 .sideBarMain {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
     /* width: 100px; */
 }
 
@@ -104,6 +110,12 @@
     display: flex;
     justify-content: center;
     position: relative;
+    opacity: 80%;
+    transition: all 0.2s;
+}
+
+.playlistItem:hover {
+    opacity: 100%;
 }
 
 
@@ -123,7 +135,7 @@
 .playlistImage {
     height: var(--square-length);
     width: var(--square-length);
-    border-radius: 0.5em;
+    border-radius: 0.3em;
     overflow: hidden;
 }
 
@@ -138,7 +150,7 @@
     font-weight: 400;
     z-index: 100;
     background-color: #ca2853;
-    border-radius: 0.4em;
+    border-radius: 0.3em;
     color: white;
 }
 
