--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,14 @@ body {
   
   overflow: hidden !important;
   overscroll-behavior: none !important;
+
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
   
   --clr-accent-500: #c17aff;
   --clr-accent-100: #ddb9fe;
