--- a/styles/PlayerFooter.module.css
+++ b/styles/PlayerFooter.module.css
@@ -72,6 +72,7 @@
   /* min-width: 90px; */
   /* margin: 0 0em; */
   display: flex;
+  height: 56px;
   justify-content: center;
   justify-self: center;
   align-items: center;
