--- a/styles/PlayerFooter.module.css
+++ b/styles/PlayerFooter.module.css
@@ -1,6 +1,31 @@
 @media screen and (max-width: 600px) {
   .PlayerFooterWrapper {
     border-bottom: solid 1px rgba(255, 255, 255, 0.395);
+    grid-template-columns: 8fr 1fr !important;
+    padding: 0.75em !important;
+
+    --footer-height: 40px !important;
+  }
+
+  .trackTitle {
+    font-size: 1em !important;
+  }
+
+  .ControlsWrapper {
+    justify-self: flex-end !important;
+  }
+
+  .SongArtwork {
+    overflow: hidden;
+    border-radius: 0.3em;
+  }
+
+  .volumeWrapper {
+    display: none !important;
+  }
+
+  .sideButton {
+    display: none !important;
   }
 }
 
@@ -15,28 +40,31 @@
   /* justify-content: space-between; */
   font-size: 0.8rem;
   font-weight: 300;
-  color: var(--clr-primary-200)
+  color: var(--clr-primary-200);
+
+  --footer-height: 56px;
+  --opacity-unactive: 70%;
+  --opacity-nosong: 50%;
 }
 
 .SongInfo {
   width: 100%;
-  height: 56px;
+  height: var(--footer-height);
   overflow: hidden;
   justify-self: start;
   display: flex;
-  /* height: 100%; */
 }
 
 .SongArtwork {
-  height: 56px;
-  width: 56px;
+  height: var(--footer-height);
+  width: var(--footer-height);
   margin-right: 0.8em;
 }
 
 
 .trackText {
   /* width: inherit; */
-  height: 100%;
+  height: var(--footer-height);
   width: 100%;
   overflow: hidden;
   display: flex;
@@ -51,7 +79,7 @@
   overflow:hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  font-size: 1rem;
+  font-size: 1.2em;
   font-weight: 400;
   color: var(--clr-primary-100)
 }
@@ -72,7 +100,7 @@
   /* min-width: 90px; */
   /* margin: 0 0em; */
   display: flex;
-  height: 56px;
+  height: var(--footer-height);
   justify-content: center;
   justify-self: center;
   align-items: center;
@@ -80,7 +108,7 @@
 }
 
 .ControlsWrapperNoSong {
-  opacity: 80%;
+  opacity: var(--opacity-nosong);
 }
 
 .PlayButton {
@@ -97,12 +125,16 @@
   align-items: center;
 }
 
+.ControlsWrapper:not(.ControlsWrapperNoSong) .PlayButton:active {
+  transform: scale(0.95);
+}
+
 .RoundPlay {
   height: 14px;
 }
 
 .sideButton {
-  opacity: 80%;
+  opacity: var(--opacity-unactive);
   height: 14px;
 }
 
@@ -110,13 +142,16 @@
   transform: rotateZ(180deg);
 }
 
-.sideButton:hover {
+.ControlsWrapper:not(.ControlsWrapperNoSong) .sideButton:hover {
   opacity: 100%;
+}
+
+.sideButton:active {
+  opacity: var(--opacity-unactive) !important;
 }
 
 .volumeWrapper {
   width: 125px;
-  
   justify-self: flex-end;
   /* margin: auto 0; */
 
@@ -129,6 +164,12 @@
 .VolumeIcon {
   /* margin-right: 1em; */
   height: 1.5em;
+  opacity: var(--opacity-unactive);
+  transition: all 0.1s;
+}
+
+.VolumeIcon:hover {
+  opacity: 100%;
 }
 
 .VolumeSlider {
