--- a/styles/PlayerFooter.module.css
+++ b/styles/PlayerFooter.module.css
@@ -1,8 +1,8 @@
 @media screen and (max-width: 600px) {
   .PlayerFooterWrapper {
     border-bottom: solid 1px rgba(255, 255, 255, 0.395);
-    grid-template-columns: 8fr 1fr !important;
-    padding: 0.75em !important;
+    grid-template-columns: 3fr auto !important;
+    padding: 0.75em 2em 0.75em 0.75em !important;
 
     --footer-height: 40px !important;
   }
@@ -24,9 +24,9 @@
     display: none !important;
   }
 
-  .sideButton {
+  /* .sideButton {
     display: none !important;
-  }
+  } */
 }
 
 .PlayerFooterWrapper {
